--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "dietfriend-frontend",
-  "version": "0.1.0",
+  "name": "snacktrack",
+  "version": "1.0.0",
   "private": true,
   "scripts": {
     "dev": "vite",
@@ -14,9 +14,13 @@
     "@mui/icons-material": "^5.15.14",
     "@mui/material": "^5.15.14",
     "axios": "^1.6.7",
+    "date-fns": "^3.6.0",
+    "framer-motion": "^11.0.8",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "recharts": "^2.7.2"
+    "react-router-dom": "^6.22.3",
+    "recharts": "^2.7.2",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
