Integrate USDA FoodData Central API with food search and nutrition lookup

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,3 +1,27 @@
-DATABASE_URL=postgresql+asyncpg://dietfriend:password@localhost:5432/dietfriend
-SPOONACULAR_API_KEY=your-spoonacular-key
-GEOCODING_API_KEY=your-geocoding-key
+﻿# SnackTrack Backend Environment Variables Template
+# Copy this file to .env and fill in your actual values
+# Never commit the .env file to version control!
+
+# Spoonacular API Configuration
+# Get your API key from: https://spoonacular.com/food-api
+SPOONACULAR_API_KEY=your_spoonacular_api_key_here
+
+# Google Geocoding API (optional, for regional features)
+# Get your API key from: https://console.cloud.google.com/
+GOOGLE_GEOCODING_API_KEY=your_google_geocoding_api_key_here
+
+# JWT Secret Key (change this in production!)
+# Generate a strong random string for production use
+JWT_SECRET_KEY=your-super-secret-key-change-in-production
+
+# Redis Configuration (optional, for production rate limiting)
+REDIS_HOST=localhost
+REDIS_PORT=6379
+REDIS_PASSWORD=
+
+# Debug Mode
+DEBUG=false
+
+# USDA FoodData Central API Configuration
+# Get your API key from: https://api.data.gov/signup/
+USDA_API_KEY=your_usda_api_key_here
